<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="367dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:gravity="center"
            android:text="@string/illstrantion_here"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_started_on_ordering_your_food"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/please_create_an_account_or_sign_in_to_your_existing_account_to_start_browsing_our_selection_of_delicious_meals_from_your_favorite_restaurants"
            android:textColor="#6A798A"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="91dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button2"
                android:drawableEnd="@drawable/iconright"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="25sp"
                android:text="@string/skip"
                android:textColor="#46505D"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>