<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="367dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:gravity="center"
            android:text="ILLSTRANTION HERE"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button3"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wide_range_of_food_categories_amp_more"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/browse_through_our_extensive_list_of_restaurants_and_dishes_and_when_you_re_ready_to_order_simply_add_your_desired_items_to_your_cart_and_checkout_it_s_that_easy"
            android:textColor="#6A798A"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="91dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSkip"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button2"
                android:drawableEnd="@drawable/iconright"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="25sp"
                android:text="@string/skip"
                android:textColor="#46505D"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>